--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Malscan is a light weight, powerful linux malware scanner designed
   for desktop, webservers, and linux infrastrucutre. Malscan is open
   source and free software licensed under the MIT License.
-baseurl: "malscan" # the subpath of your site, e.g. /blog/
-url: "https://jgrancell.github.io" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "https://www.malscan.org" # the base hostname & protocol for your site
 twitter_username: jgrancell
 github_username:  jgrancell
 
