--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.0.1"
 authors = ["Josh Grancell <jgrancell@campbellmarketing.com>"]
 
 [dependencies]
+"hyper" = "0.9.0"
+"time" = "0.1.0"
+"term-painter" = "0.2.0"
